--- a/comp322/a1/Makefile
+++ b/comp322/a1/Makefile
@@ -1,10 +1,10 @@
 all: testytest
 
 testytest:
-	$ g++ -std=c++11 -o testytest continuedTest.cpp continuedStudent.cpp continued.h
+	$ g++ -std=c++11 -o testytest continuedTest.cpp continuedStudent.cpp
 
 gradygrade:
-	$ g++ -std=c++11 -o gradygrade continuedGrading.cpp continuedStudent.cpp continued.h
+	$ g++ -std=c++11 -o gradygrade continuedGrading.cpp continuedStudent.cpp
 
 clean: 
 	rm -rf *.o testytest gradygrade
